--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -11,7 +11,36 @@
     <div class="container">
         <%- body %>
     </div>
-
+    <style>
+        body{
+            background-color: rgb(78, 78, 78);
+        }
+        label{
+            margin-bottom: 5px; margin-top: 5px; color: rgb(60, 170, 253); font-weight: bold;
+        }
+        .hellodog{
+            width: 140px; height: 120px; margin-bottom: 10px;
+        }
+        .loginBtn{
+            color: white;
+            background-color: rgb(60, 170, 250);
+        }
+        .loginBtn:hover{
+            background-color: rgb(40, 120, 250);
+        }
+        .title{
+            color: rgb(60, 170, 253);
+        }
+        button{
+            margin-top: 5%;
+        }
+        p{
+            color: black;
+        }
+        .card{
+            margin-bottom: 7%;
+        }
+    </style>
     <script src="https://kit.fontawesome.com/bc37d104cd.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     
