--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -1,14 +1,13 @@
 <div class="row mt-5">
     <div class="col-md-6 m-auto">
-      <div class="card card-body text-center rounded" style="background-color: rgb(255, 255, 255);">
-        <h1 style="color: rgb(130, 200, 255);">passwoof</h1>
-        <img src="/images/dogphone.gif" class="img-fluid rounded mx-auto d-block" style="width: 140px; height: 120px; margin-bottom: 10px;"/>
+      <div class="card card-body text-center rounded title">
+        <h1>passwoof</h1>
+        <img src="/images/dogphone.gif" class="img-fluid rounded mx-auto d-block hellodog"/>
         <p>Create an account or login</p>
         <a href="/users/register" class="btn btn-primary btn-block mb-2 rounded"
           >Register</a
         >
-        <a href="/users/login" class="btn btn-secondary btn-block rounded" style="background-color: rgb(132, 200, 255);">Login</a>
-        <style>body{background-color: rgb(78, 78, 78);}</style>
+        <a href="/users/login" class="btn btn-secondary btn-block rounded loginBtn">Login</a>
       </div>
     </div>
   </div>
