--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -16,12 +16,13 @@
             background-color: rgb(78, 78, 78);
         }
         label{
-            margin-bottom: 5px; margin-top: 5px; color: rgb(60, 170, 253); font-weight: bold;
+            margin-bottom: 5px; margin-top: 5px; color: rgb(60, 170, 250); font-weight: bold;
         }
         .hellodog{
             width: 140px; height: 120px; margin-bottom: 10px;
         }
         .loginBtn{
+            margin-top: 2%;
             color: white;
             background-color: rgb(60, 170, 250);
         }
@@ -31,15 +32,31 @@
         .title{
             color: rgb(60, 170, 253);
         }
-        button{
-            margin-top: 5%;
+        
+        .regBtn {
+            margin-top: 2%;
         }
+        .regBtn:hover{
+            color:cadetblue;
+        }
+            
         p{
             color: black;
         }
         .card{
             margin-bottom: 7%;
         }
+        .inputStyle{
+            background-color: rgba(150, 170, 170, 0.4);
+            border: 1px solid black;
+        }
+        .dashText{
+            color: rgb(100, 190, 190);
+        }
+        .tc{
+            color: black;
+        }
+
     </style>
     <script src="https://kit.fontawesome.com/bc37d104cd.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
