--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,7 +3,7 @@
       <div class="card card-body rounded title">
         <h1 class="text-center mb-3 rounded"><i class="fas fa-sign-in-alt"></i>  Login</h1>
         <img src="/images/dogphone.gif" class="img-fluid rounded mx-auto d-block hellodog"/>
-
+        <%-include('./partials/messages'); %>
         <form action="/users/login" method="POST">
           <div class="form-group">
             <label for="email">Email</label>
@@ -11,7 +11,7 @@
               type="email"
               id="email"
               name="email"
-              class="form-control"
+              class="form-control inputStyle"
               placeholder="Enter Email"
             />
           </div>
@@ -21,7 +21,7 @@
               type="password"
               id="password"
               name="password"
-              class="form-control"
+              class="form-control inputStyle"
               placeholder="Enter Password"
             />
           </div>
@@ -31,6 +31,5 @@
           No Account? <a href="/users/register">Register</a>
         </p>
       </div>
-      <style>body{background-color: rgb(78, 78, 78);}</style>
     </div>
   </div>
