--- a/views/register.ejs
+++ b/views/register.ejs
@@ -5,6 +5,7 @@
           <i class="fas fa-user-plus"></i> Register
         </h1>
         <img src="/images/dogphone.gif" class="img-fluid rounded mx-auto d-block hellodog"/>
+        <%-include('./partials/messages'); %>
         <form action="/users/register" method="POST">
           <div class="form-group">
             <label for="name">Name</label>
@@ -12,7 +13,7 @@
               type="name"
               id="name"
               name="name"
-              class="form-control"
+              class="form-control inputStyle"
               placeholder="Enter Name"
               value="<%= typeof name != 'undefined' ? name : '' %>"
             />
@@ -23,7 +24,7 @@
               type="email"
               id="email"
               name="email"
-              class="form-control"
+              class="form-control inputStyle"
               placeholder="Enter Email"
               value="<%= typeof email != 'undefined' ? email : '' %>"
             />
@@ -34,7 +35,7 @@
               type="password"
               id="password"
               name="password"
-              class="form-control"
+              class="form-control inputStyle"
               placeholder="Create Password"
               value="<%= typeof password != 'undefined' ? password : '' %>"
             />
@@ -45,12 +46,12 @@
               type="password"
               id="password2"
               name="password2"
-              class="form-control"
+              class="form-control inputStyle"
               placeholder="Confirm Password"
               value="<%= typeof password2 != 'undefined' ? password2 : '' %>"
             />
           </div>
-          <button type="submit" class="btn btn-primary btn-block rounded">
+          <button type="submit" class="btn btn-primary btn-block rounded regBtn">
             Register
           </button>
         </form>
