--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -4,7 +4,7 @@
         <h1>passwoof</h1>
         <img src="/images/dogphone.gif" class="img-fluid rounded mx-auto d-block hellodog"/>
         <p>Create an account or login</p>
-        <a href="/users/register" class="btn btn-primary btn-block mb-2 rounded"
+        <a href="/users/register" class="btn btn-primary btn-block mb-2 rounded regBtn"
           >Register</a
         >
         <a href="/users/login" class="btn btn-secondary btn-block rounded loginBtn">Login</a>
